# llm-rag-v3

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/concepts/: 家庭医生服务组.md  康复服务.md  日常就医服务.md  重疾全程服务.md
data/entities/: V1等级达标规则.md  专家会诊.md  体检专项深度检查服务.md  出院安排协助.md  名医大咖服务流程.md  在线问诊.md  家庭医生服务.md  平安臻享家医健康服务计划.md  心理咨询.md  日常就医服务流程.md  检查安排协助.md  海外就医协助.md  海外远程书面咨询.md  特色体检.md  疑似确诊期.md  疾病全程管理.md  重疾专案管理.md  重疾服务等待期与非共享规则.md  门诊预约协助及陪诊.md  陪诊服务流程.md  音视频问诊.md
data/sources/: 平安臻享家医服务手册.md  臻享家医服务权益细项.jpg.md
docs/: API.md  large-scale-rag-optimization.md  production-rag-design.md  wiki知识问题.xlsx  评估集.xlsx  评估集_0607.xlsx  评估集_0607_2.xlsx  评估集_llm_wiki_chat_stream_result.jsonl  评估集_llm_wiki_chat_stream_result.xlsx  评估集_result.xlsx  评估集_result_20260607_144644.xlsx  评估集_result_20260607_220053.xlsx  评估集_result_20260607_223606.xlsx  评估集_result_rewriter.xlsx  评估集_zx.xlsx  评估集_全量.xlsx
scripts/: ingest_rate_table.py
tests/unit/: test_answer_prompt.py  test_bm25_elasticsearch.py  test_chunker.py  test_collect_llm_wiki_chat_stream_results.py  test_collect_rag_answer_results.py  test_dashscope.py  test_frontmatter.py  test_indexing_worker.py  test_retrieval.py  test_scanner.py
wiki/: index.md  log.md  overview.md
wiki/audits/: 【第四期】平安康养会员代理人指导手册-入会服务篇（23年9月版）-抽取质量审计.md  平保寿发〔2025〕559号附件1：平安智盈倍护（2026）终身护理保险条款-抽取质量审计.md  平保寿发〔2025〕559号附件2：平安智盈倍护（2026）终身护理保险费率表-抽取质量审计.md  平保寿发〔2025〕559号附件3：平安智盈倍护（2026）终身护理保险A01投保规则-抽取质量审计.md  平保寿发〔2025〕559号附件4：平安智盈倍护（2026）终身护理保险A05投保规则-抽取质量审计.md  平安少儿盛世福（2023）重大疾病保险-抽取质量审计.md  (+7 more)
(+216 files in other folders)
